fix scrollbar

--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -96,21 +96,20 @@ main {
     min-height: 297px !important;
 }
 
-::-webkit-scrollbar {
-    width: 10px;
-}
+body::-webkit-scrollbar {
+    width: 1em;
+  }
+   
+  body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px var(--bs-dark);
+  }
+   
+  body::-webkit-scrollbar-thumb {
+    background-color: rgba(169, 169, 169, 0.5);
+    /* outline: 1px solid slategrey; */
+  }
 
-::-webkit-scrollbar-track {
-    background: var(--gray);
-    border-radius: 7px;
-}
-
-::-webkit-scrollbar-thumb {
-    background: var(--navy);
-    border-radius: 7px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: var(--navy-dark);
-    /* color: rgb(0, 0, 102); */
-}
+  body::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(169, 169, 169, 0.75);
+    /* outline: 1px solid slategrey; */
+  }
